<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/shopping_cart"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/item_1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/usd50"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/item_2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/usd100"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/total"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/usd150"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/confirmation"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            app:cardCornerRadius="100dp"
            app:cardBackgroundColor="@color/cardview_shadow_start_color"
            android:layout_height="wrap_content">
        <ImageButton
            android:padding="20dp"
            android:background="@color/cardview_shadow_start_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_check_24"
            />
        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>
        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            app:cardCornerRadius="100dp"
            app:cardBackgroundColor="@color/cardview_shadow_start_color"
            android:layout_height="wrap_content">
            <ImageButton
                android:padding="20dp"
                android:background="@color/cardview_shadow_start_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/baseline_close_24"
                />
        </com.google.android.material.circularreveal.cardview.CircularRevealCardView>
    </LinearLayout>
</LinearLayout>